# pupil_ros_bridge

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
msg/: BaseTimestamps.msg  Circle3D.msg  Ellipse.msg  Gaze.msg  GazeOnSurface.msg  Pupil.msg  Sphere.msg
scripts/: gaze_publisher.py  gaze_subscriber.py  pupil_ipc_bridge.py  pupil_publisher.py  pupil_subscriber.py
src/pupil_ros_bridge/: constants.py  conversion.py  dummy_data.py  ipc.py  publishers.py  tools.py
test_data/: gaze.json  pupil.json  surface.json
